fix content overflow

--- a/stylesrc/home.styl
+++ b/stylesrc/home.styl
@@ -19,7 +19,7 @@ button.cta:hover
   background-color: accent-dark;
 
 #hero
-  height: 75vh
+  height: 80vh
   color: white-color;
   background-image: url('/images/hero.jpg');
   background-size: cover;
